--- a/Pymoli/HeroesOfPymoli.ipynb
+++ b/Pymoli/HeroesOfPymoli.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "# Dependencies and Setup\r\n",
     "import pandas as pd"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "\r\n",
     "\r\n",
@@ -135,7 +135,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "metadata": {}
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "source": [
     "players= purchase_data[\"SN\"].unique()\r\n",
     "len(players)\r\n",
@@ -176,14 +176,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "source": [
     "Total_players= pd.DataFrame([\"Total players\", 576])\r\n",
     "Total_players.head()"
@@ -234,7 +234,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 5
     }
    ],
    "metadata": {}
@@ -264,15 +264,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [],
+   "execution_count": 32,
+   "source": [
+    "item_purchased= purchase_data[\"Item ID\"].unique()\r\n",
+    "average_price= purchase_data[\"Price\"].mean()\r\n",
+    "max_price= purchase_data[\"Price\"].max()\r\n",
+    "min_price= purchase_data[\"Price\"].min()\r\n",
+    "\r\n",
+    "Total_items_purchased= pd.DataFrame([\"Total items purchaded\", len(item_purchased)],[\"average price\", average_price.__round__(2)])\r\n",
+    "Total_items_purchased.head()\r\n"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     179         $3.05                 780     $2,379.77"
+       "                                   0\n",
+       "average price  Total items purchaded\n",
+       "3.05                             179"
       ],
       "text/html": [
        "<div>\n",
@@ -293,19 +302,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Number of Unique Items</th>\n",
-       "      <th>Average Price</th>\n",
-       "      <th>Number of Purchases</th>\n",
-       "      <th>Total Revenue</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>average price</th>\n",
+       "      <td>Total items purchaded</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.05</th>\n",
        "      <td>179</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -313,7 +320,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 32
     }
    ],
    "metadata": {
@@ -402,6 +409,242 @@
      },
      "metadata": {},
      "execution_count": 4
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "source": [
+    ".......gender_data= purchase_data.groupby(\"Gender\")\r\n",
+    "gender_data.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Purchase ID             SN  Age                 Gender  Item ID  \\\n",
+       "0              0        Lisim78   20                   Male      108   \n",
+       "1              1    Lisovynya38   40                   Male      143   \n",
+       "2              2     Ithergue48   24                   Male       92   \n",
+       "3              3  Chamassasya86   24                   Male      100   \n",
+       "4              4      Iskosia90   23                   Male      131   \n",
+       "9              9    Chanosian48   35  Other / Non-Disclosed      136   \n",
+       "15            15      Lisassa64   21                 Female       98   \n",
+       "18            18      Reunasu60   22                 Female       82   \n",
+       "22            22   Siarithria38   38  Other / Non-Disclosed       24   \n",
+       "38            38       Reulae52   10                 Female      116   \n",
+       "41            41      Assosia88   20                 Female        7   \n",
+       "55            55      Phaelap26   25                 Female       84   \n",
+       "82            82     Haerithp41   16  Other / Non-Disclosed      160   \n",
+       "111          111       Sundim98   21  Other / Non-Disclosed       41   \n",
+       "228          228    Jiskirran77   20  Other / Non-Disclosed       80   \n",
+       "\n",
+       "                                     Item Name  Price  \n",
+       "0    Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                            Frenzied Scimitar   1.56  \n",
+       "2                                 Final Critic   4.88  \n",
+       "3                                  Blindscythe   3.27  \n",
+       "4                                         Fury   1.44  \n",
+       "9                 Ghastly Adamantite Protector   3.58  \n",
+       "15                 Deadline, Voice Of Subtlety   2.89  \n",
+       "18                                     Nirvana   4.90  \n",
+       "22                               Warped Fetish   3.81  \n",
+       "38                     Renewed Skeletal Katana   4.18  \n",
+       "41                Thorn, Satchel of Dark Souls   1.33  \n",
+       "55                                  Arcane Gem   3.79  \n",
+       "82                                  Azurewrath   4.40  \n",
+       "111                                      Orbit   4.75  \n",
+       "228                                  Dreamsong   3.39  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Chanosian48</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>136</td>\n",
+       "      <td>Ghastly Adamantite Protector</td>\n",
+       "      <td>3.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Lisassa64</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>98</td>\n",
+       "      <td>Deadline, Voice Of Subtlety</td>\n",
+       "      <td>2.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Reunasu60</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>82</td>\n",
+       "      <td>Nirvana</td>\n",
+       "      <td>4.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Siarithria38</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Warped Fetish</td>\n",
+       "      <td>3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Reulae52</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>116</td>\n",
+       "      <td>Renewed Skeletal Katana</td>\n",
+       "      <td>4.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Assosia88</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Thorn, Satchel of Dark Souls</td>\n",
+       "      <td>1.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>55</td>\n",
+       "      <td>Phaelap26</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>84</td>\n",
+       "      <td>Arcane Gem</td>\n",
+       "      <td>3.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>82</td>\n",
+       "      <td>Haerithp41</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>160</td>\n",
+       "      <td>Azurewrath</td>\n",
+       "      <td>4.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>111</td>\n",
+       "      <td>Sundim98</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Orbit</td>\n",
+       "      <td>4.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>228</td>\n",
+       "      <td>Jiskirran77</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Dreamsong</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
     }
    ],
    "metadata": {}
