--- a/Pymoli/HeroesOfPymoli.ipynb
+++ b/Pymoli/HeroesOfPymoli.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "source": [
     "# Dependencies and Setup\r\n",
     "import pandas as pd\r\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "source": [
     "\r\n",
     "\r\n",
@@ -136,7 +136,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -164,11 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "source": [
-    "players= purchase_data[\"SN\"].unique()\r\n",
-    "len(players)\r\n",
-    "\r\n"
+    "players= len(purchase_data[\"SN\"].unique())\r\n",
+    "players\r\n"
    ],
    "outputs": [
     {
@@ -179,17 +178,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 111
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "source": [
-    "Total_players= pd.DataFrame([\"Total players\", 576])\r\n",
-    "Total_players.head()"
+    "pd.DataFrame({\"Total players\": [players]})"
    ],
    "outputs": [
     {
@@ -214,16 +212,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>Total players</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Total players</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>576</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -231,13 +225,12 @@
        "</div>"
       ],
       "text/plain": [
-       "               0\n",
-       "0  Total players\n",
-       "1            576"
+       "   Total players\n",
+       "0            576"
       ]
      },
      "metadata": {},
-     "execution_count": 112
+     "execution_count": 16
     }
    ],
    "metadata": {}
@@ -267,12 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "source": [
     "item_purchased= purchase_data[\"Item ID\"].unique()\r\n",
     "average_price= purchase_data[\"Price\"].mean()\r\n",
-    "max_price= purchase_data[\"Price\"].max()\r\n",
-    "min_price= purchase_data[\"Price\"].min()\r\n",
+    "#max_price= purchase_data[\"Price\"].max()\r\n",
+    "#min_price= purchase_data[\"Price\"].min()\r\n",
     "\r\n",
     "Total_items_purchased= pd.DataFrame([\"Total items purchaded\", len(item_purchased)],[\"average price\", average_price.__round__(2)])\r\n",
     "Total_items_purchased.head()\r\n"
@@ -323,7 +316,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 113
+     "execution_count": 6
     }
    ],
    "metadata": {
@@ -354,47 +347,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "source": [
-    "#First we need to sort the data and eliminate duplicate user names, now we can examine the data under the \"gender\" colum"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "source": [
-    "filtered_data_bySN= purchase_data.drop_duplicates(\"SN\")\r\n",
-    "#Now count how many rows reapeat each gender\r\n",
-    "Gender_counts= filtered_data_bySN[\"Gender\"].value_counts()\r\n",
-    "Gender_counts.values"
+    "#First we need to sort the data by gender, then eliminate douplicate user names\r\n",
+    "ByGender= purchase_data.groupby(\"Gender\")\r\n",
+    "\r\n",
+    "gender_data= ByGender.agg({\"SN\":\"nunique\"}).reset_index()\r\n",
+    "gender_data"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>SN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([484,  81,  11], dtype=int64)"
+       "                  Gender   SN\n",
+       "0                 Female   81\n",
+       "1                   Male  484\n",
+       "2  Other / Non-Disclosed   11"
       ]
      },
      "metadata": {},
-     "execution_count": 115
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "source": [
-    "#create data frame with Gender analysis\r\n",
-    "Gender_demo= pd.DataFrame({\r\n",
-    "    \"Gender\":['Male','Female','Other/ Non-Disclosed'],\r\n",
-    "    \"Total Count\":[484,81,11],\r\n",
-    "    \"Percentage of Players\":[48400/579, 8100/579, 1100/579]\r\n",
-    "})\r\n",
-    "Gender_demo.round(2)\r\n"
+    "gender_data[\"Percentage of players\"]=(gender_data[\"SN\"]*100)/players\r\n",
+    "new_name_data= gender_data.rename(columns={\"SN\":\"Total Count\"})\r\n",
+    "round(new_name_data,2)"
    ],
    "outputs": [
     {
@@ -421,41 +448,41 @@
        "      <th></th>\n",
        "      <th>Gender</th>\n",
        "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
+       "      <th>Percentage of players</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>484</td>\n",
-       "      <td>83.59</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>81</td>\n",
-       "      <td>13.99</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Other/ Non-Disclosed</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
        "      <td>11</td>\n",
-       "      <td>1.90</td>\n",
+       "      <td>1.91</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Gender  Total Count  Percentage of Players\n",
-       "0                  Male          484                  83.59\n",
-       "1                Female           81                  13.99\n",
-       "2  Other/ Non-Disclosed           11                   1.90"
+       "                  Gender  Total Count  Percentage of players\n",
+       "0                 Female           81                  14.06\n",
+       "1                   Male          484                  84.03\n",
+       "2  Other / Non-Disclosed           11                   1.91"
       ]
      },
      "metadata": {},
-     "execution_count": 116
+     "execution_count": 39
     }
    ],
    "metadata": {}
@@ -488,31 +515,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 47,
    "source": [
-    "new_Gdata= filtered_data_bySN[filtered_data_bySN['Gender']=='Male']].copy()"
+    "#We need to get the values as series, filter by gender.\r\n",
+    "Purchase_count= ByGender[\"Purchase ID\"].count()\r\n",
+    "Purchase_count\r\n",
+    "\r\n"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Male                     484\n",
-       "Female                    81\n",
-       "Other / Non-Disclosed     11\n",
-       "Name: Gender, dtype: int64"
+       "Gender\n",
+       "Female                   113\n",
+       "Male                     652\n",
+       "Other / Non-Disclosed     15\n",
+       "Name: Purchase ID, dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 133
+     "execution_count": 47
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "source": [],
+   "execution_count": 118,
+   "source": [
+    "Purchase_count.rename(\"Purchase Count\",inplace=True)\r\n",
+    "\r\n",
+    "Ave_price= ByGender[\"Price\"].mean()\r\n",
+    "Ave_price= round(Ave_price,2)\r\n",
+    "Ave_price= Ave_price.map(\"${:,.2f}\".format)\r\n",
+    "Ave_price_byG= Ave_price.rename(\"Average Purchase Price\", inplace=True)\r\n",
+    "Ave_price_byG\r\n",
+    "\r\n",
+    "total_spending= ByGender[\"Price\"].sum()\r\n",
+    "total_spending= total_spending.map(\"${:,.2f}\".format)\r\n",
+    "total_spending.rename(\"Total Purchase Value\", inplace=True)\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female                     $361.94\n",
+       "Male                     $1,967.64\n",
+       "Other / Non-Disclosed       $50.19\n",
+       "Name: Total Purchase Value, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 118
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "source": [
+    "#Summary table\r\n",
+    "gender_analysis_df= pd.concat([Purchase_count,Ave_price_byG,total_spending],axis=1)\r\n",
+    "gender_analysis_df\r\n"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
@@ -539,11 +610,9 @@
        "      <th>Purchase Count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gender</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -555,42 +624,39 @@
        "      <td>113</td>\n",
        "      <td>$3.20</td>\n",
        "      <td>$361.94</td>\n",
-       "      <td>$4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
        "      <td>$1,967.64</td>\n",
-       "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>$3.35</td>\n",
        "      <td>$50.19</td>\n",
-       "      <td>$4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
        "\n",
-       "                      Total Purchase Value Avg Total Purchase per Person  \n",
-       "Gender                                                                    \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
+       "                      Total Purchase Value  \n",
+       "Gender                                      \n",
+       "Female                             $361.94  \n",
+       "Male                             $1,967.64  \n",
+       "Other / Non-Disclosed               $50.19  "
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 120
     }
    ],
    "metadata": {}
