--- a/Pymoli/HeroesOfPymoli.ipynb
+++ b/Pymoli/HeroesOfPymoli.ipynb
@@ -692,8 +692,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 125,
    "source": [
+    "#Get the values to create the bins\r\n",
     "Age_range= purchase_data.get(\"Age\")\r\n",
     "Max_age= Age_range.max()\r\n",
     "Min_age= Age_range.min()"
@@ -703,16 +704,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "source": [
     "bins= [0,10,15,20,25,30,35,40,100]\r\n",
-    "groupname= [\"<10\",\"10-14\",\"15-19\",\"20-24\",\"25-29\",\"30-34\",\"35-39\",\"40+\"]\r\n",
-    "purchase_data[\"Age Range\"] = pd.cut(purchase_data[\"Age\"], bins, labels=groupname, include_lowest=True)\r\n",
-    "purchase_data.head()\r\n",
-    "A_range= purchase_data[\"Age Range\"].value_counts()\r\n",
-    "A_range\r\n",
-    "Age_df= pd.DataFrame({\"Age\":groupname,\"Number of players\": A_range})\r\n",
-    "Age_df"
+    "groupname= [\"<10\",\"10-14\",\"15-19\",\"20-24\",\"25-29\",\"30-34\",\"35-39\",\"40+\"]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "source": [
+    "#copy of df so we don't change original\r\n",
+    "purchase_databins= purchase_data.copy()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "source": [
+    "purchase_databins[\"Age Range\"] = pd.cut(purchase_databins[\"Age\"], bins, right=False, labels=groupname, include_lowest=True)\r\n",
+    "purchase_databins.head()"
    ],
    "outputs": [
     {
@@ -737,77 +752,111 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Number of players</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Age Range</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>&lt;10</td>\n",
-       "      <td>325</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>10-14</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>15-19</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
        "      <td>20-24</td>\n",
-       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>25-29</td>\n",
-       "      <td>52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>30-34</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>35-39</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
        "      <td>40+</td>\n",
-       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>20-24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Age  Number of players\n",
-       "20-24    <10                325\n",
-       "15-19  10-14                200\n",
-       "25-29  15-19                 77\n",
-       "10-14  20-24                 54\n",
-       "30-34  25-29                 52\n",
-       "35-39  30-34                 33\n",
-       "<10    35-39                 32\n",
-       "40+      40+                  7"
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price Age Range  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53     20-24  \n",
+       "1                          Frenzied Scimitar   1.56       40+  \n",
+       "2                               Final Critic   4.88     20-24  \n",
+       "3                                Blindscythe   3.27     20-24  \n",
+       "4                                       Fury   1.44     20-24  "
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 133
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "source": [],
+   "execution_count": 157,
+   "source": [
+    "#Filter by age range\r\n",
+    "A_range= purchase_databins.groupby(\"Age Range\")\r\n",
+    "A_range_count=A_range[\"SN\"].nunique()\r\n",
+    "A_range_percent= round((A_range_count*100 /players),2)\r\n",
+    "\r\n",
+    "Age_df= pd.DataFrame({\"Total Count\":A_range_count,\r\n",
+    "                      \"Percentage of players\": A_range_percent})\r\n",
+    "Age_df\r\n"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
@@ -832,77 +881,76 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
+       "      <th>Percentage of players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Range</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;10</th>\n",
        "      <td>17</td>\n",
-       "      <td>2.95%</td>\n",
+       "      <td>2.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10-14</th>\n",
        "      <td>22</td>\n",
-       "      <td>3.82%</td>\n",
+       "      <td>3.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
        "      <td>107</td>\n",
-       "      <td>18.58%</td>\n",
+       "      <td>18.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20-24</th>\n",
        "      <td>258</td>\n",
-       "      <td>44.79%</td>\n",
+       "      <td>44.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
        "      <td>77</td>\n",
-       "      <td>13.37%</td>\n",
+       "      <td>13.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-34</th>\n",
        "      <td>52</td>\n",
-       "      <td>9.03%</td>\n",
+       "      <td>9.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35-39</th>\n",
        "      <td>31</td>\n",
-       "      <td>5.38%</td>\n",
+       "      <td>5.38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
        "      <td>12</td>\n",
-       "      <td>2.08%</td>\n",
+       "      <td>2.08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Total Count Percentage of Players\n",
-       "<10             17                 2.95%\n",
-       "10-14           22                 3.82%\n",
-       "15-19          107                18.58%\n",
-       "20-24          258                44.79%\n",
-       "25-29           77                13.37%\n",
-       "30-34           52                 9.03%\n",
-       "35-39           31                 5.38%\n",
-       "40+             12                 2.08%"
+       "           Total Count  Percentage of players\n",
+       "Age Range                                    \n",
+       "<10                 17                   2.95\n",
+       "10-14               22                   3.82\n",
+       "15-19              107                  18.58\n",
+       "20-24              258                  44.79\n",
+       "25-29               77                  13.37\n",
+       "30-34               52                   9.03\n",
+       "35-39               31                   5.38\n",
+       "40+                 12                   2.08"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 157
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -928,6 +976,123 @@
     "\n",
     "\n",
     "* Display the summary data frame"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "source": [
+    "#We need Purchase count, Average purchase price, Total purchase value, Avg total purchase per person from before\r\n",
+    "#Use same bins\r\n",
+    "bins= [0,10,15,20,25,30,35,40,100]\r\n",
+    "groupname= [\"<10\",\"10-14\",\"15-19\",\"20-24\",\"25-29\",\"30-34\",\"35-39\",\"40+\"]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "source": [
+    "purchase_count_byage = A_range[\"Purchase ID\"].count()\r\n",
+    "avg_purchase_price = A_range[\"Price\"].mean()\r\n",
+    "total_purchase_value = A_range[\"Price\"].sum()\r\n",
+    "average_total_purchase_pp = (total_purchase_value/A_range_count)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "source": [
+    "#Summary df\r\n",
+    "Purchase_Analysis_df= pd.DataFrame({\r\n",
+    "    \"Purchase Count\":purchase_count_byage,\r\n",
+    "    \"Average Purchase Price\":avg_purchase_price,\r\n",
+    "    \"Total Purchase Value\":total_purchase_value,\r\n",
+    "    \"Avg Total Purchase per Person\":average_total_purchase_pp\r\n",
+    "})\r\n",
+    "\r\n",
+    "Purchase_Analysis_df.style.format({\r\n",
+    "    \"Average Purchase Price\":\"${:,.2f}\",\r\n",
+    "    \"Total Purchase Value\": \"${:,.2f}\",\r\n",
+    "    \"Avg Total Purchase per Person\": \"${:,.2f}\"\r\n",
+    "})"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_d06a5_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Age Range</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row0\" class=\"row_heading level0 row0\" ><10</th>\n",
+       "                        <td id=\"T_d06a5_row0_col0\" class=\"data row0 col0\" >23</td>\n",
+       "                        <td id=\"T_d06a5_row0_col1\" class=\"data row0 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_d06a5_row0_col2\" class=\"data row0 col2\" >$77.13</td>\n",
+       "                        <td id=\"T_d06a5_row0_col3\" class=\"data row0 col3\" >$4.54</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row1\" class=\"row_heading level0 row1\" >10-14</th>\n",
+       "                        <td id=\"T_d06a5_row1_col0\" class=\"data row1 col0\" >28</td>\n",
+       "                        <td id=\"T_d06a5_row1_col1\" class=\"data row1 col1\" >$2.96</td>\n",
+       "                        <td id=\"T_d06a5_row1_col2\" class=\"data row1 col2\" >$82.78</td>\n",
+       "                        <td id=\"T_d06a5_row1_col3\" class=\"data row1 col3\" >$3.76</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row2\" class=\"row_heading level0 row2\" >15-19</th>\n",
+       "                        <td id=\"T_d06a5_row2_col0\" class=\"data row2 col0\" >136</td>\n",
+       "                        <td id=\"T_d06a5_row2_col1\" class=\"data row2 col1\" >$3.04</td>\n",
+       "                        <td id=\"T_d06a5_row2_col2\" class=\"data row2 col2\" >$412.89</td>\n",
+       "                        <td id=\"T_d06a5_row2_col3\" class=\"data row2 col3\" >$3.86</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row3\" class=\"row_heading level0 row3\" >20-24</th>\n",
+       "                        <td id=\"T_d06a5_row3_col0\" class=\"data row3 col0\" >365</td>\n",
+       "                        <td id=\"T_d06a5_row3_col1\" class=\"data row3 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_d06a5_row3_col2\" class=\"data row3 col2\" >$1,114.06</td>\n",
+       "                        <td id=\"T_d06a5_row3_col3\" class=\"data row3 col3\" >$4.32</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row4\" class=\"row_heading level0 row4\" >25-29</th>\n",
+       "                        <td id=\"T_d06a5_row4_col0\" class=\"data row4 col0\" >101</td>\n",
+       "                        <td id=\"T_d06a5_row4_col1\" class=\"data row4 col1\" >$2.90</td>\n",
+       "                        <td id=\"T_d06a5_row4_col2\" class=\"data row4 col2\" >$293.00</td>\n",
+       "                        <td id=\"T_d06a5_row4_col3\" class=\"data row4 col3\" >$3.81</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row5\" class=\"row_heading level0 row5\" >30-34</th>\n",
+       "                        <td id=\"T_d06a5_row5_col0\" class=\"data row5 col0\" >73</td>\n",
+       "                        <td id=\"T_d06a5_row5_col1\" class=\"data row5 col1\" >$2.93</td>\n",
+       "                        <td id=\"T_d06a5_row5_col2\" class=\"data row5 col2\" >$214.00</td>\n",
+       "                        <td id=\"T_d06a5_row5_col3\" class=\"data row5 col3\" >$4.12</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row6\" class=\"row_heading level0 row6\" >35-39</th>\n",
+       "                        <td id=\"T_d06a5_row6_col0\" class=\"data row6 col0\" >41</td>\n",
+       "                        <td id=\"T_d06a5_row6_col1\" class=\"data row6 col1\" >$3.60</td>\n",
+       "                        <td id=\"T_d06a5_row6_col2\" class=\"data row6 col2\" >$147.67</td>\n",
+       "                        <td id=\"T_d06a5_row6_col3\" class=\"data row6 col3\" >$4.76</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_d06a5_level0_row7\" class=\"row_heading level0 row7\" >40+</th>\n",
+       "                        <td id=\"T_d06a5_row7_col0\" class=\"data row7 col0\" >13</td>\n",
+       "                        <td id=\"T_d06a5_row7_col1\" class=\"data row7 col1\" >$2.94</td>\n",
+       "                        <td id=\"T_d06a5_row7_col2\" class=\"data row7 col2\" >$38.24</td>\n",
+       "                        <td id=\"T_d06a5_row7_col3\" class=\"data row7 col3\" >$3.19</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x2b220e0d2e0>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 160
+    }
    ],
    "metadata": {}
   },
