most popular items

--- a/Pymoli/HeroesOfPymoli.ipynb
+++ b/Pymoli/HeroesOfPymoli.ipynb
@@ -1097,137 +1097,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "source": [],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$77.13</td>\n",
-       "      <td>$4.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>28</td>\n",
-       "      <td>$2.96</td>\n",
-       "      <td>$82.78</td>\n",
-       "      <td>$3.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>136</td>\n",
-       "      <td>$3.04</td>\n",
-       "      <td>$412.89</td>\n",
-       "      <td>$3.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>365</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>$1,114.06</td>\n",
-       "      <td>$4.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>101</td>\n",
-       "      <td>$2.90</td>\n",
-       "      <td>$293.00</td>\n",
-       "      <td>$3.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>73</td>\n",
-       "      <td>$2.93</td>\n",
-       "      <td>$214.00</td>\n",
-       "      <td>$4.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>41</td>\n",
-       "      <td>$3.60</td>\n",
-       "      <td>$147.67</td>\n",
-       "      <td>$4.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$2.94</td>\n",
-       "      <td>$38.24</td>\n",
-       "      <td>$3.19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "Age Ranges                                                              \n",
-       "<10                    23                  $3.35               $77.13   \n",
-       "10-14                  28                  $2.96               $82.78   \n",
-       "15-19                 136                  $3.04              $412.89   \n",
-       "20-24                 365                  $3.05            $1,114.06   \n",
-       "25-29                 101                  $2.90              $293.00   \n",
-       "30-34                  73                  $2.93              $214.00   \n",
-       "35-39                  41                  $3.60              $147.67   \n",
-       "40+                    13                  $2.94               $38.24   \n",
-       "\n",
-       "           Avg Total Purchase per Person  \n",
-       "Age Ranges                                \n",
-       "<10                                $4.54  \n",
-       "10-14                              $3.76  \n",
-       "15-19                              $3.86  \n",
-       "20-24                              $4.32  \n",
-       "25-29                              $3.81  \n",
-       "30-34                              $4.12  \n",
-       "35-39                              $4.76  \n",
-       "40+                                $3.19  "
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Top Spenders"
@@ -1256,8 +1125,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 168,
    "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "#From the table below, we want top 5, total purchase value, average purchase price and purchase count and who they are\r\n",
+    "spenders_df= purchase_data.groupby(\"SN\")\r\n",
+    "\r\n",
+    "spender_purchase_count= spenders_df[\"Purchase ID\"].count()\r\n",
+    "spender_average_purchase_price= spenders_df[\"Price\"].mean()\r\n",
+    "spender_total_price= spenders_df[\"Price\"].sum()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "source": [
+    "spender_purchase_count=spender_purchase_count.sort_values(ascending=False)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "source": [
+    "#Spender summary table\r\n",
+    "top_spenders_df= pd.DataFrame({\r\n",
+    "    \"Purchase count\":spender_purchase_count,\r\n",
+    "    \"Average Purchase Price\": spender_average_purchase_price,\r\n",
+    "    \"Total Purchase Value\": spender_total_price})\r\n",
+    "top_spenders_df=top_spenders_df.sort_values([\"Total Purchase Value\"], ascending=False)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "source": [
+    "top_spenders_df.style.format({\r\n",
+    "    \"Average Purchase Price\":\"${:,.2f}\",\r\n",
+    "    \"Total Purchase Value\": \"${:,.2f}\"})\r\n",
+    "top_spenders_df.head()"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1281,7 +1199,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
+       "      <th>Purchase count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
@@ -1296,49 +1214,49 @@
        "    <tr>\n",
        "      <th>Lisosia93</th>\n",
        "      <td>5</td>\n",
-       "      <td>$3.79</td>\n",
-       "      <td>$18.96</td>\n",
+       "      <td>3.792000</td>\n",
+       "      <td>18.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Idastidru52</th>\n",
        "      <td>4</td>\n",
-       "      <td>$3.86</td>\n",
-       "      <td>$15.45</td>\n",
+       "      <td>3.862500</td>\n",
+       "      <td>15.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Chamjask73</th>\n",
        "      <td>3</td>\n",
-       "      <td>$4.61</td>\n",
-       "      <td>$13.83</td>\n",
+       "      <td>4.610000</td>\n",
+       "      <td>13.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Iral74</th>\n",
        "      <td>4</td>\n",
-       "      <td>$3.40</td>\n",
-       "      <td>$13.62</td>\n",
+       "      <td>3.405000</td>\n",
+       "      <td>13.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Iskadarya95</th>\n",
        "      <td>3</td>\n",
-       "      <td>$4.37</td>\n",
-       "      <td>$13.10</td>\n",
+       "      <td>4.366667</td>\n",
+       "      <td>13.10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Purchase Count Average Purchase Price Total Purchase Value\n",
-       "SN                                                                     \n",
-       "Lisosia93                 5                  $3.79               $18.96\n",
-       "Idastidru52               4                  $3.86               $15.45\n",
-       "Chamjask73                3                  $4.61               $13.83\n",
-       "Iral74                    4                  $3.40               $13.62\n",
-       "Iskadarya95               3                  $4.37               $13.10"
+       "             Purchase count  Average Purchase Price  Total Purchase Value\n",
+       "SN                                                                       \n",
+       "Lisosia93                 5                3.792000                 18.96\n",
+       "Idastidru52               4                3.862500                 15.45\n",
+       "Chamjask73                3                4.610000                 13.83\n",
+       "Iral74                    4                3.405000                 13.62\n",
+       "Iskadarya95               3                4.366667                 13.10"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 187
     }
    ],
    "metadata": {}
